#add: setting server with express

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "API for portfolio website",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "nodemon server.js"
     },
     "repository": {
         "type": "git",
@@ -15,5 +15,8 @@
     "bugs": {
         "url": "https://github.com/htutwaiphyoe/htutwaiphyoe-backend/issues"
     },
-    "homepage": "https://github.com/htutwaiphyoe/htutwaiphyoe-backend#readme"
+    "homepage": "https://github.com/htutwaiphyoe/htutwaiphyoe-backend#readme",
+    "dependencies": {
+        "express": "^4.17.1"
+    }
 }
