--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "homepage": "https://github.com/htutwaiphyoe/htutwaiphyoe-backend#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.11.9"
     }
 }
