#add: implementing MVC architecture

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
+PORT=9000
 
 # database credentials
 DB_CONNECTION_STRING=mongodb+srv://htutwaiphyoe:<password>@cluster0.21gmx.mongodb.net/blogs?retryWrites=true&w=majority
