#add: Error Handling Finished

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ NODE_ENV=development
 PORT=9000
 
 # database credentials
-DB_CONNECTION_STRING=mongodb+srv://htutwaiphyoe:<password>@cluster0.21gmx.mongodb.net/blogs?retryWrites=true&w=majority
+DB_CONNECTION_STRING=mongodb+srv://htutwaiphyoe:<password>@cluster0.21gmx.mongodb.net/portfolio?retryWrites=true&w=majority
 DB_USER=htutwaiphyoe
 DB_PASSWORD=HwpPortfolio812000
