--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.11.9"
+    },
+    "engines": {
+        "node": ">=10.0.0"
     }
 }
