--- a/package.json
+++ b/package.json
@@ -17,11 +17,25 @@
     },
     "homepage": "https://github.com/htutwaiphyoe/htutwaiphyoe-backend#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "mongoose": "^5.11.9"
+        "mongoose": "^5.11.9",
+        "mongoose-unique-validator": "^2.0.3",
+        "validator": "^13.5.2"
     },
     "engines": {
         "node": ">=10.0.0"
+    },
+    "devDependencies": {
+        "eslint": "^7.17.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "prettier": "^2.2.1"
     }
 }
