--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "API for portfolio website",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "repository": {
         "type": "git",
