--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express-mongo-sanitize": "^2.0.2",
         "express-rate-limit": "^5.2.3",
         "helmet": "^4.3.1",
+        "hpp": "^0.2.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.9",
         "mongoose-unique-validator": "^2.0.3",
